cumberland station 23 template v3

--- a/fire_districts/commercial-1-port-norris.html
+++ b/fire_districts/commercial-1-port-norris.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>Port Norris Fire District 1 — Fire District Elections</title>
+  <title>Cumberland Station 23 - Fire District 4 Election in Maurice River Township</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -16,10 +16,10 @@
 
   <!-- Preview image meta tags -->
   <meta property="og:type" content="website" />
-  <meta property="og:title" content="Port Norris Fire District 1 — Inform The Vote NJ" />
+  <meta property="og:title" content="Cumberland Station 23 — Inform The Vote NJ" />
   <meta property="og:description" content="Candidates, ballot question, and issues — 2026 Fire District Elections (Cumberland County)" />
   <meta property="og:image" content="https://informthevotenj.com/assets/candidates/homePageMetaTagLogo.png" />
-  <meta property="og:url" content="https://informthevotenj.com/fire-district-elections/fire_districts/commercial-1-port-norris.html" />
+  <meta property="og:url" content="https://informthevotenj.com/fire_districts/maurice-river-4-cumberland-23.html" />
 
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-64FQD2P8BV"></script>
@@ -169,6 +169,29 @@
       text-overflow: ellipsis;
       max-width: 70ch;
     }
+
+    .header-actions{
+      display:flex;
+      justify-content: flex-end;
+      align-items:center;
+      gap: 10px;
+      flex-wrap: wrap;
+    }
+    .homebtn{
+      display:inline-flex;
+      align-items:center;
+      justify-content:center;
+      padding: 8px 12px;
+      border-radius: 999px;
+      text-decoration:none;
+      border: 1px solid rgba(255,255,255,0.14);
+      background: rgba(0,0,0,0.18);
+      color: rgba(255,255,255,0.92);
+      font-family: "Roboto Mono", monospace;
+      font-size: 0.84rem;
+      white-space: nowrap;
+    }
+    .homebtn:hover{ opacity: 0.92; transform: translateY(-1px); }
 
     .jump-row{
       display:flex;
@@ -461,6 +484,11 @@
         </div>
       </div>
 
+      <!-- header actions -->
+      <div class="header-actions" aria-label="Header actions">
+        <a class="homebtn" href="../index.html" aria-label="Home (Fire District Elections Index)">Home</a>
+      </div>
+
       <!-- jump to + spy buttons -->
       <div class="jump-row">
         <span class="jump-label">Jump to</span>
@@ -481,17 +509,14 @@
     <!-- SUMMARY -->
     <section class="primer" id="summary">
       <div>
-        <h1>Commercial Township Fire District 1 — Port Norris Fire Company</h1>
+        <h1>Cumberland Station 23 Fire District Election - District 4 in Maurice River Township</h1>
 
         <p class="small">
-          <b>Quick summary:</b> The fire district associated with Port Norris has two seats open for election this year, William Pettit is running for re-election and one more person may be a write-in.
+          <b>Quick summary:</b> The fire district associated with Cumberland Station 23 has two seats open for election this year, William Pettit is running for re-election and one more person may be a write-in.
           There is one known ballot question regarding the purchase of a fire truck and a utility truck.
           There are a few known issues, some of which are county-wide and a few that are district specific.
         </p>
 
-        <div class="btnrow" aria-label="Primary actions">
-          <a class="btn primary" href="../index.html">Back to Fire District Elections Index</a>
-        </div>
       </div>
     </section>
 
@@ -500,59 +525,47 @@
       <h2>Candidates</h2>
       <p class="small">Each candidate has their own section. Questionnaire responses will be posted as received.</p>
 
-      <details open>
+      <details>
         <summary>William Pettit (running for re-election)</summary>
         <div class="inside">
-          <details>
-            <summary>Questionnaire</summary>
-            <div class="inside">
-              <ul class="checks">
-                <li>
-                  <span class="checkmark ok" aria-hidden="true">✓</span>
-                  Outreach sent
-                </li>
-                <li>
-                  <span class="checkmark no" aria-hidden="true">✕</span>
-                  Response received
-                </li>
-              </ul>
-
-              <div class="callout">
-                <span class="tag">Status</span>
-                <p class="small" style="margin:0;">
-                  No questionnaire response has been received yet.
-                </p>
-              </div>
-            </div>
-          </details>
+          <div class="callout">
+            <span class="tag">Questionnaire</span>
+            <ul class="checks">
+              <li>
+                <span class="checkmark ok" aria-hidden="true">✓</span>
+                Outreach sent
+              </li>
+              <li>
+                <span class="checkmark no" aria-hidden="true">✕</span>
+                Response received
+              </li>
+            </ul>
+            <p class="small" style="margin:10px 0 0;">
+              No questionnaire response has been received yet.
+            </p>
+          </div>
         </div>
       </details>
 
       <details>
-        <summary>Potential write-in (name TBD)</summary>
+        <summary>Potential write-in (William Hall)</summary>
         <div class="inside">
-          <details>
-            <summary>Questionnaire</summary>
-            <div class="inside">
-              <ul class="checks">
-                <li>
-                  <span class="checkmark ok" aria-hidden="true">✓</span>
-                  Outreach sent
-                </li>
-                <li>
-                  <span class="checkmark no" aria-hidden="true">✕</span>
-                  Response received
-                </li>
-              </ul>
-
-              <div class="callout">
-                <span class="tag">Status</span>
-                <p class="small" style="margin:0;">
-                  No questionnaire response has been received yet.
-                </p>
-              </div>
-            </div>
-          </details>
+          <div class="callout">
+            <span class="tag">Questionnaire</span>
+            <ul class="checks">
+              <li>
+                <span class="checkmark ok" aria-hidden="true">✓</span>
+                Outreach sent
+              </li>
+              <li>
+                <span class="checkmark no" aria-hidden="true">✕</span>
+                Response received
+              </li>
+            </ul>
+            <p class="small" style="margin:10px 0 0;">
+              No questionnaire response has been received yet.
+            </p>
+          </div>
         </div>
       </details>
     </section>
@@ -564,11 +577,11 @@
         Each ballot question is posted with the literal language and a plain-English explanation.
       </p>
 
-      <details open>
+      <details>
         <summary>Ballot Question 1 — Purchase of firetruck + utility vehicle (up to $1,250,000)</summary>
         <div class="inside">
 
-          <details open>
+          <details>
             <summary>Literal ballot language</summary>
             <div class="inside">
               <p class="small" style="margin:0;">
@@ -615,7 +628,7 @@
         This section is split into district-specific issues and county-wide issues (which will appear on all district pages).
       </p>
 
-      <details open>
+      <details>
         <summary>District-specific issues (Port Norris FD1)</summary>
         <div class="inside">
           <ul class="clean">
@@ -657,20 +670,15 @@
         District-specific coverage links live here (posts, interviews, meeting notes, etc.).
       </p>
 
-      <details open>
+      <details>
         <summary>Coverage log (TBD)</summary>
         <div class="inside">
-          <div class="callout">
-            <span class="tag">Placeholder</span>
-            <p class="small" style="margin:0;">
-              Add links here as you publish district-specific coverage.
-            </p>
-          </div>
 
           <ul class="clean">
-            <li><b>Post / article:</b> TBD</li>
+            <li><b>Post / article:</b> Coming Soon</li>
             <li><b>Interview:</b> TBD</li>
-            <li><b>Meeting coverage:</b> TBD</li>
+            <li><b>Meeting coverage:</b> I initailly connected with Cumberland Station 23 at the Maurice River Township Committee meeting on January 15th. When attending 
+            their subsequent meeting on January 23rd, they were very helpful with answering my questions and discussing coverage moving forward.</li>
           </ul>
         </div>
       </details>
