--- a/fire_districts/maurice-river-4-cumberland-23.html
+++ b/fire_districts/maurice-river-4-cumberland-23.html
@@ -656,6 +656,7 @@
             <li><b>Volunteer model vs affordability:</b> The use of volunteers versus the cost of living and affordability situations should be discussed.</li>
             <li><b>Turnout:</b> Low voter turnout should be re-discussed, as it calls into question the strength of election processes.</li>
             <li><b>Visibility gap:</b> Lack of public attendance and press coverage of meetings leaves the public and voters in the dark regarding essential emergency services.</li>
+            <li><b>Legal Notice vs Meaningful Notice:</b> Traditionally, public meetings across the county only needed to be advertised in one or two newspapers. As the digital age takes over, there is a push to publish on websites, but is that enough? Vineland's current data center issue and low awareness in fire districts suggest more advertising could be done.</li>
             <li><b>EMS uncertainty:</b> The ongoing Inspira contract discussions leaves districts in limbo about how to handle EMS coverage on a long term vision.</li>
             <li><b>Radio programming:</b> The lack of a radio programmer hinders inter-county communication during mutual aid endeavors.</li>
           </ul>
@@ -671,7 +672,7 @@
       </p>
 
       <details>
-        <summary>Coverage log (TBD)</summary>
+        <summary>Coverage log</summary>
         <div class="inside">
 
           <ul class="clean">
