last names added to leesburg candidates

--- a/fire_districts/maurice-river-1-leesburg-26.html
+++ b/fire_districts/maurice-river-1-leesburg-26.html
@@ -483,7 +483,7 @@
 
         <p class="small">
           <b>Quick summary:</b> I attended one district meeting on <b>November 24</b>, where I was told two gentlemen
-          (<b>Corey</b> and <b>Rob</b>) would be up for re-election.
+          (<b>Corey Shaffer</b> and <b>Rob Creamer</b>) would be up for re-election.
           I handed over business cards to encourage participation with my project, but I have not received communication from them.
           The meeting in December did not appear to occur as expected. I may be able to get more information at tomorrow night’s meeting,
           weather permitting. No known ballot questions or district-specific issues came up at the November meeting.
@@ -499,7 +499,7 @@
       </p>
 
       <details>
-        <summary>Corey (reported as up for re-election — last name not confirmed)</summary>
+        <summary>Corey Shaffer(reported as up for re-election)</summary>
         <div class="inside">
           <div class="callout">
             <span class="tag">Questionnaire</span>
@@ -515,7 +515,7 @@
       </details>
 
       <details>
-        <summary>Rob (reported as up for re-election — last name not confirmed)</summary>
+        <summary>Rob Creamer(reported as up for re-election)</summary>
         <div class="inside">
           <div class="callout">
             <span class="tag">Questionnaire</span>
