name correction mauricetown election

--- a/fire_districts/commercial-2-mauricetown.html
+++ b/fire_districts/commercial-2-mauricetown.html
@@ -371,7 +371,7 @@
 
         <p class="small">
           <b>Quick summary:</b> Mauricetown Fire Company (Commercial Township Fire District 2) appears to have two commissioner seats open,
-          with <b>Cliff Sutton</b> and <b>Ron Sutton</b> up for re-election. I am currently unaware of any ballot questions for this district,
+          with <b>Clifford Sharp</b> and <b>Ron Sutton</b> up for re-election. I am currently unaware of any ballot questions for this district,
           but I plan to ask directly at the next scheduled meeting on <b>February 2</b>. Since the candidate names are known,
           I also plan to provide questionnaires directly at the meeting to encourage participation.
         </p>
@@ -385,7 +385,7 @@
       <p class="small">Each candidate has their own section. Questionnaire responses will be posted as received.</p>
 
       <details>
-        <summary>Cliff Sutton (running for re-election)</summary>
+        <summary>Clifford Sharp (running for re-election)</summary>
         <div class="inside">
           <div class="callout">
             <span class="tag">Questionnaire</span>
