downe and dividing creek races updated

--- a/fire_districts/downe-2-dividing-creek.html
+++ b/fire_districts/downe-2-dividing-creek.html
@@ -485,8 +485,8 @@
         <p class="small">
           <b>Quick summary:</b> Dividing Creek Fire Company (Downe Township Fire District 2) does not appear to have a dedicated website,
           which makes basic election and meeting information harder to verify quickly.
-          I may be able to get clarification about the meeting schedule, candidates, and any ballot questions
-          at an upcoming Downe Township Committee meeting.
+          I was able to verify the candidates through the Downe Township clerk and get their email addresses, though I haven't received 
+          responses yet.
         </p>
       </div>
     </section>
@@ -494,31 +494,31 @@
     <!-- CANDIDATES -->
     <section class="card" id="candidates">
       <h2>Candidates</h2>
-      <p class="small">
-        Candidate names and seat counts are currently unknown. This section will be updated when confirmed by the district or official sources.
-      </p>
 
       <details>
-        <summary>Candidate information not yet confirmed</summary>
-        <div class="inside">
-          <div class="callout">
-            <span class="tag">Status</span>
-            <ul class="checks">
-              <li>
-                <span class="checkmark ok" aria-hidden="true">✓</span>
-                Outreach sent
-              </li>
-              <li>
-                <span class="checkmark no" aria-hidden="true">✕</span>
-                Response received
-              </li>
-            </ul>
-            <p class="small" style="margin:10px 0 0;">
-              Once candidate names are confirmed, each candidate will have their own section here with questionnaire responses (if provided).
-            </p>
-          </div>
-        </div>
+        <summary>Vicki Rugenus</summary>
+        <ul class="checks">
+          <li><span class="checkmark ok">✓</span> Outreach emailed</li>
+          <li><span class="checkmark no">✕</span> Response received</li>
+        </ul>
       </details>
+
+      <details>
+        <summary>Rebecca Wilford</summary>
+        <ul class="checks">
+          <li><span class="checkmark ok">✓</span> Outreach emailed</li>
+          <li><span class="checkmark no">✕</span> Response received</li>
+        </ul>
+      </details>
+
+      <details>
+        <summary>John William Lewis, Jr.</summary>
+        <ul class="checks">
+          <li><span class="checkmark ok">✓</span> Outreach emailed (provided email doesn't work)</li>
+          <li><span class="checkmark no">✕</span> Response received</li>
+        </ul>
+      </details>
+
     </section>
 
     <!-- BALLOT QUESTIONS -->
