--- a/fire_districts/downe-1-downe-township.html
+++ b/fire_districts/downe-1-downe-township.html
@@ -489,7 +489,8 @@
         <p class="small">
           <b>Quick summary:</b> It appears as though the Downe Township Fire District Website, at least in terms of meeting minutes,
           has not been updated since October of 2024, with no known time and location of meetings.
-          Outreach has been conducted but no response has been received.
+          I was able to verify 2 candidates through the Downe Township clerk and I sent outreach to the candidate's emails, though no 
+          responses have been sent back yet.
           Perhaps attending next months Downe Township Committee meeting will yield some info.
         </p>
       </div>
@@ -498,31 +499,23 @@
     <!-- CANDIDATES -->
     <section class="card" id="candidates">
       <h2>Candidates</h2>
-      <p class="small">
-        Candidate names and seat counts are currently unknown. This section will be updated when confirmed by the district or official sources.
-      </p>
 
       <details>
-        <summary>Candidate information not yet confirmed</summary>
-        <div class="inside">
-          <div class="callout">
-            <span class="tag">Status</span>
-            <ul class="checks">
-              <li>
-                <span class="checkmark ok" aria-hidden="true">✓</span>
-                Outreach sent
-              </li>
-              <li>
-                <span class="checkmark no" aria-hidden="true">✕</span>
-                Response received
-              </li>
-            </ul>
-            <p class="small" style="margin:10px 0 0;">
-              Once candidate names are confirmed, each candidate will have their own section here with questionnaire responses (if provided).
-            </p>
-          </div>
-        </div>
+        <summary>Elizabeth Cowley</summary>
+        <ul class="checks">
+          <li><span class="checkmark ok">✓</span> Outreach emailed</li>
+          <li><span class="checkmark no">✕</span> Response received</li>
+        </ul>
       </details>
+
+      <details>
+        <summary>Duncan Munson</summary>
+        <ul class="checks">
+          <li><span class="checkmark ok">✓</span> Outreach emailed</li>
+          <li><span class="checkmark no">✕</span> Response received</li>
+        </ul>
+      </details>
+
     </section>
 
     <!-- BALLOT QUESTIONS -->
