--- a/index.html
+++ b/index.html
@@ -482,6 +482,14 @@
 
 <body>
 
+  <!-- SITE NOTICE -->
+  <div class="site-notice" role="status" aria-live="polite">
+    <div class="inner">
+      <span class="dot" aria-hidden="true"></span>
+      <span>Site under construction during the afternoon of 2/9/26</span>
+    </div>
+  </div>
+
   <!-- HEADER -->
   <header>
     <div class="header-inner">
