--- a/fire_districts/maurice-river-2-heislerville-25.html
+++ b/fire_districts/maurice-river-2-heislerville-25.html
@@ -424,7 +424,7 @@
   <div class="site-notice" role="status" aria-live="polite">
     <div class="inner">
       <span class="dot" aria-hidden="true"></span>
-      <span>Site under construction during the evening of 1/25/26</span>
+      <span>Site under construction during the afternoon of 2/9/26</span>
     </div>
   </div>
 
