info forum and timeline sections removed from index page, added articles from the past few weeks to coverage section

--- a/index.html
+++ b/index.html
@@ -758,66 +758,6 @@
         </p>
       </div>
     </section>
-    
-    <!-- 2) FORUM (make this the loud section) -->
-    <section class="card" id="forum">
-      <h2>Candidate / Info Forum</h2>
-      <p class="small">
-        This is the main public-facing event for fire district awareness and election participation.
-        It’s not a debate — it’s education-first, designed to help residents understand what’s happening and why it matters.
-      </p>
-
-      <div class="forum-hero">
-        <p class="forum-title">Millville Public Library — Fire District Forum</p>
-        <p class="forum-meta"><b>Saturday, February 7th</b> • 11:00 AM – 1:00 PM</p>
-        <p class="forum-meta">Millville Public Library • Millville, NJ</p>
-
-        <div class="callout" style="margin-top:12px;">
-          <span class="tag">What to expect</span>
-          <ul class="clean">
-            <li>What fire districts are and how they’re governed</li>
-            <li>What the districts need right now (commissioners, staffing, volunteers)</li>
-            <li>Candidate participation and Q&A (structured, not a circus)</li>
-            <li>How the public can help (recruitment, fundraising, awareness)</li>
-          </ul>
-        </div>
-
-        <div class="callout">
-          <span class="tag">Invitation</span>
-          <p class="small" style="margin:0;">
-            Candidates, commissioners, firefighters, municipal/county officials, and the general public are invited.
-            If you’re involved and want to help shape what’s highlighted, that input is welcome.
-          </p>
-        </div>
-
-        <div class="callout">
-          <span class="tag">Participation note</span>
-          <p class="small" style="margin:0;">
-            Participation is being offered to all candidates and districts. If someone declines or does not respond,
-            that lack of participation becomes part of the public record and the coverage.
-          </p>
-        </div>
-
-        <div class="btnrow" aria-label="Forum actions">
-          <a class="btn primary" href="#coverage">See coverage & updates</a>
-          <a class="btn" href="child_pages/contact.html">Contact / participate</a>
-          <!-- Optional: if you later create a dedicated forum page -->
-          <!-- <a class="btn" href="/fire-forum.html">Forum details</a> -->
-        </div>
-      </div>
-
-      <details>
-        <summary>Click to expand: If you’re a candidate or commissioner — what I need (now)</summary>
-        <div class="inside">
-          <ul class="clean">
-            <li>Candidate names + best contact info (email/phone) as soon as possible</li>
-            <li>Any ballot questions (budget/capital) and plain-language explanations</li>
-            <li>Anything the public should understand about staffing, equipment, mutual aid, EMS</li>
-            <li>Preferred “where to post flyers” locations in your coverage area</li>
-          </ul>
-        </div>
-      </details>
-    </section>
 
     <!-- 3) COVERAGE -->
     <section class="card" id="coverage">
@@ -856,69 +796,49 @@
         </div>
       </details>
 
+      <details>
+        <summary>Article 3 (Facebook): Emily DelRossi, Millville Firefighter Interview</summary>
+        <div class="inside">
+          <p>
+            <a href="https://www.facebook.com/share/p/1DdYd41eXK/" target="_blank" rel="noreferrer noopener">Facebook post link</a>
+          </p>
+        </div>
+      </details>
+
+      <details>
+        <summary>Article 4 (Facebook): John Oliver Coverage of Special Districts, Including Fire Districts</summary>
+        <div class="inside">
+          <p>
+            <a href="https://www.facebook.com/share/p/1KeNCBy2Nd/" target="_blank" rel="noreferrer noopener">Facebook post link</a>
+          </p>
+        </div>
+      </details>
+
+      <details>
+        <summary>Article 5 (Facebook): Fire District Conversation with Doug Albrecht</summary>
+        <div class="inside">
+          <p>
+            <a href="https://www.facebook.com/share/p/16tHNX5dPs/" target="_blank" rel="noreferrer noopener">Facebook post link</a>
+          </p>
+        </div>
+      </details>
+
+      <details>
+        <summary>Article 6 (Facebook): Informational Forum</summary>
+        <div class="inside">
+          <p>
+            <a href="https://www.facebook.com/share/p/1C22CzwxT9/" target="_blank" rel="noreferrer noopener">Facebook post link</a>
+          </p>
+        </div>
+      </details>
+
+
       <div class="callout">
         <span class="tag">Tip</span>
         <p class="small" style="margin:0;">
           If you have a district meeting schedule, candidate info, or ballot question language, send it in — it helps turn “legal notice” into meaningful notice.
         </p>
       </div>
-    </section>
-
-    <!-- 4) TIMELINE (move forum out; keep chronology + squeeze explanation) -->
-    <section class="card" id="timeline">
-      <h2>Timeline</h2>
-      <p class="small">
-        The timeline is now part of the story. Coverage isn’t “late” — it’s structurally squeezed.
-      </p>
-
-      <div class="callout">
-        <span class="tag">Official chronology (current)</span>
-        <strong>New Jersey 2026 Fire Election Chronology (PDF)</strong>
-        <p class="small" style="margin:0.4rem 0 0;">
-          <a href="https://www.nj.gov/state/elections/assets/pdf/chrons/2026-chron-fire-election-0113.pdf" target="_blank" rel="noreferrer noopener">
-            https://www.nj.gov/state/elections/assets/pdf/chrons/2026-chron-fire-election-0113.pdf
-          </a>
-        </p>
-      </div>
-
-      <details>
-        <summary>Click to expand: Why the “known timeline” still creates an unrealistic window</summary>
-        <div class="inside">
-          <p>
-            Even when the chronology exists, the practical window is tiny. With petitions filed on <b>January 23rd</b> and then needing processing/publishing time,
-            the press and the public may only have <b>2–3 weeks</b> to:
-          </p>
-          <ul class="clean">
-            <li>Identify who is actually running (if anyone)</li>
-            <li>Contact candidates and districts for basic information</li>
-            <li>Advertise events and explain what fire districts even are</li>
-            <li>Give voters time to make a decision before Election Day</li>
-          </ul>
-          <p>
-            That’s hard under any conditions — and it’s especially hard after November election fatigue and January reorganization meetings.
-          </p>
-        </div>
-      </details>
-
-      <details>
-        <summary>Click to expand: Reference links (condensed)</summary>
-        <div class="inside">
-          <ul class="clean">
-            <li>
-              <b>Cumberland County Votes — Fire Elections:</b>
-              <a href="https://cumberlandcountyvotes.com/elections/fire-elections/" target="_blank" rel="noreferrer noopener">
-                https://cumberlandcountyvotes.com/elections/fire-elections/
-              </a>
-            </li>
-            <li>
-              <b>Laurel Lake Fire District site (verified; county listing was inconsistent):</b>
-              <a href="https://www.commercialtwpbofc3.com/home-meetings" target="_blank" rel="noreferrer noopener">
-                https://www.commercialtwpbofc3.com/home-meetings
-              </a>
-            </li>
-          </ul>
-        </div>
-      </details>
     </section>
 
     <footer>
