nav buttons for forum and timeline removed

--- a/index.html
+++ b/index.html
@@ -527,9 +527,7 @@
         <div class="spy" aria-label="Page sections">
           <a class="navbtn" href="#primer" data-target="primer">Primer</a>
           <a class="navbtn" href="#districts" data-target="districts">District Pages</a>
-          <a class="navbtn" href="#forum" data-target="forum">Forum</a>
           <a class="navbtn" href="#coverage" data-target="coverage">Coverage</a>
-          <a class="navbtn" href="#timeline" data-target="timeline">Timeline</a>
         </div>
       </div>
 
@@ -555,7 +553,7 @@
           and for anyone who might want to get a little more involved after Election Day.
         </p>
 
-        <details open>
+        <details>
           <summary>Cut to the Chase: What most fire district voters need to know</summary>
           <div class="inside">
             <p><strong>Let’s cut to the chase.</strong></p>
